--- a/src/components/LoadingScreen.astro
+++ b/src/components/LoadingScreen.astro
@@ -6,13 +6,13 @@
             <img 
                 id="pan1"
                 class="absolute inset-0 w-full h-full object-cover rounded-lg transition-opacity duration-500"
-                src="../../public/FiverrPack/pan1.jpg" 
+                src="https://pbs.twimg.com/media/GdFSfewW0AA4UUK?format=jpg&name=4096x4096" 
                 alt="Loading Image 1"
             />
             <img 
                 id="pan2"
                 class="absolute inset-0 w-full h-full object-cover rounded-lg opacity-0 transition-opacity duration-500"
-                src="../../public/FiverrPack/pan2.jpg" 
+                src="https://pbs.twimg.com/media/GdFSfe2XwAEXuSh?format=jpg&name=4096x4096" 
                 alt="Loading Image 2"
             />
         </div>
