--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,6 +21,7 @@ import Twitter from "../components/Icons/Twitter.astro";
 import Spotify from "../components/Icons/Spotify.astro";
 import Tiktok from "../components/Icons/Tiktok.astro";
 import HoverImage from "../components/HoverImage.astro";
+import Instagram from "../components/Icons/Instagram.astro";
 ---
 
 <Layout title="Dot Dager | Full-Stack/Lead Developer">
@@ -39,7 +40,7 @@ import HoverImage from "../components/HoverImage.astro";
             >
                 <img
                     class="perfil rounded-full w-32 h-32 md:w-40 md:h-40 mb-8 cursor-pointer"
-                    src="../../public/FiverrPack/perfil.png"
+                    src="https://pbs.twimg.com/media/GdFSZ-IW4AAKrPo?format=png&name=small"
                     alt="dager foto"
                     transition:name="profile"
                 />
@@ -113,8 +114,8 @@ import HoverImage from "../components/HoverImage.astro";
                     <Resume class="size-4 md:size-6" />
                     Música
                 </SocialPill>
-                <SocialPill href="https://www.youtube.com/@DotDager">
-                    <Resume class="size-4 md:size-6" />
+                <SocialPill href="https://www.instagram.com/dager.32?igsh=dzBpYXA0ZXFod2Vs">
+                    <Instagram class="size-4 md:size-6" />
                     Instagram
                 </SocialPill>
             </nav>
@@ -137,7 +138,7 @@ import HoverImage from "../components/HoverImage.astro";
             /> -->
             <img
                 class="rounded-lg shadow-lg w-auto h-64 transform hover:scale-105 transition-transform duration-500 hover:-rotate-2"
-                src="../../public/FiverrPack/cartonero12.png"
+                src="https://pbs.twimg.com/media/GdFSXsAXoAEl7YT?format=jpg&name=large"
                 alt="Primera imagen"
                 transition:name="barba"
             />
@@ -191,7 +192,7 @@ import HoverImage from "../components/HoverImage.astro";
             </p>
             <img
                 class="rounded-lg shadow-lg w-auto h-64 transform hover:scale-105 transition-transform duration-500 hover:rotate-2"
-                src="../../public/FiverrPack/gato.jpg"
+                src="https://pbs.twimg.com/media/GdFSY74WQAAeJtd?format=jpg&name=4096x4096"
                 alt="Primera imagen"
                 transition:name="gato"
             />
@@ -200,7 +201,7 @@ import HoverImage from "../components/HoverImage.astro";
     <SectionContainer class="flex flex-col md:flex-row gap-8 p-4">
         <img
             class="rounded-lg shadow-lg w-auto h-64 transform hover:scale-105 transition-transform duration-500 hover:-rotate-2"
-            src="../../public/FiverrPack/barba.png"
+            src="https://pbs.twimg.com/media/GdFSVtDXgAEEdJg?format=jpg&name=large"
             alt="Primera imagen"
             transition:name="barba"
         />
