--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,7 +21,7 @@ const { title } = Astro.props;
 		<link
 			rel="icon"
 			type="image/svg+xml"
-			href="../../public/FiverrPack (1)/perfil.png"
+			href="https://pbs.twimg.com/media/GdFSZ-IW4AAKrPo?format=png&name=small"
 		/>
 		<title>{title}</title>
 	</head>
