--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,23 +56,21 @@ import Instagram from "../components/Icons/Instagram.astro";
             <h2
                 class="text-lg md:text-xl lg:text-2xl text-center max-w-[700px] text-pretty"
             >
-                <span class="">Programador </span>
-                ,
-                <span class=""> músico </span>
-                ,
+                <span class="">Programador, </span>
+                <span class=""> músico, </span>
                 <span class=""> filósofo </span>
                 y contador serial de chistes de
                 <span class="text-purple-400"> mierda. </span> ¿Buscabas algo más
                 pibe? Hago que el código
                 <span class="text-purple-400">funcione</span>
-                <span class="opacity-60"> (cuando quiere) </span>, que la música
+                <span class="opacity-60"> (cuando quiere),</span> que la música
                 <span class="text-purple-400">suene</span>
                 y que los chistes de doble sentido te hagan pensar si deberías reírte
                 o
                 <span class="opacity-50"> denunciarme. </span>
                 En mi canal mezclo
                 <span class="text-purple-500"> programación, </span>
-                <span class="text-purple-500"> falopa </span>, y muchas
+                <span class="text-purple-500"> falopa </span> y muchas
                 referencias a los
                 <span class="text-purple-500"> pepinos. </span>
             </h2>
@@ -180,14 +178,14 @@ import Instagram from "../components/Icons/Instagram.astro";
                 transition:animate="slide"
             >
                 Amo los <span class="text-purple-400">gatos</span>,
-                principalmente esos deambulan libremente por los
+                principalmente esos que deambulan libremente por los
 
                 <span class="text-purple-600"> bosques de Palermo. </span> En su
                 compañía, encuentro la paz. Siempre busco rodearme de <span
                     class="text-purple-600"
                 >
-                    mis amigos felinos
-                </span>, ya que para mi, es la combinación perfecta para las
+                    mis amigos felinos,
+                </span> ya que para mí, es la combinación perfecta para las
                 tardes de relax.
             </p>
             <img
@@ -207,12 +205,12 @@ import Instagram from "../components/Icons/Instagram.astro";
         />
         <p class="text-base md:text-lg mb-4 text-pretty">
             En mis tiempos libre soy<span class="text-purple-400">
-                músico
-            </span>, me gusta experimentar con los
+                músico,
+            </span> me gusta experimentar con los
             <span class="text-purple-600">instrumentos</span>, principalmente la
             guitarra, me fascina manosear el capo <span class="text-purple-600"
                 >traste</span
-            > y jugar con las diferentes tonalidades
+            > y jugar con las diferentes tonalidades.
         </p>
     </SectionContainer>
     <SectionContainer class="yutun flex md:flex-row flex-wrap gap-8 p-4">
