--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@
     </span>
     <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
         <li>
-            <a href="#inicio" class="hover:underline me-4 md:me-6">Incio</a>
+            <a href="#inicio" class="hover:underline me-4 md:me-6">Inicio</a>
         </li>
         <li>
             <a href="#https://www.youtube.com/c/DagerMusic" class="hover:underline me-4 md:me-6">Mi música</a>
